fix: extra margin if safari + background-color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-
+  background-color: #272a2c;
   font-family: "Fira Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
